--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html>
 <head>
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title> CSS Assignment 3 - Course Assignment 5 </title>
+	<!-- Add Google Fonts link -->
+	<link href='https://fonts.googleapis.com/css?family=Lato|Bree+Serif' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="styles/main.css">
 </head>
 
